--- a/index.html
+++ b/index.html
@@ -14,59 +14,110 @@
             background-color: #f7f9fc;
         }
 
+        /* Preloader */
+        #preloader {
+            background-color: #162447;
+            position: fixed;
+            top: 0;
+            left: 0;
+            width: 100%;
+            height: 100%;
+            z-index: 9999;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+
+        #preloader img {
+            width: 150px;
+            animation: rotateLogo 2s infinite linear;
+        }
+
+        @keyframes rotateLogo {
+            0% {
+                transform: rotate(0deg);
+            }
+            100% {
+                transform: rotate(360deg);
+            }
+        }
+
         /* Header */
         header {
-            background-color: #0b3d91;
+            background-color: #162447;
             color: white;
             padding: 20px 0;
-            text-align: center;
+            display: flex;
+            justify-content: space-between;
+            align-items: center;
+            opacity: 0;
+            transform: translateY(-100%);
+            animation: fadeInDown 1s forwards;
         }
 
-        .header-title h1 {
-            font-size: 2.5rem;
-            margin: 0;
+        .header-content {
+            display: flex;
+            align-items: center;
         }
 
-        .header-title p {
-            font-size: 1.2rem;
+        .logo img {
+            width: 50px;
+            height: 50px;
+            margin-right: 15px;
         }
 
-        /* Event Section */
-        .event-section {
-            margin: 40px 0;
-        }
-
-        .event-details h2 {
-            font-size: 2rem;
-            color: #0b3d91;
+        .logo-name {
+            font-size: 1.5rem;
             font-weight: bold;
+            color: white;
         }
 
-        .event-details p {
-            font-size: 1.1rem;
-            margin-bottom: 10px;
+        .event-header-title {
+            text-align: center;
+            width: 100%;
         }
 
-        /* Why Attend Section */
-        .why-attend {
-            background-color: #eef1f5;
-            padding: 40px 20px;
-            margin-top: 40px;
-            border-radius: 8px;
+        .event-header-title h1 {
+            font-size: 2.5rem;
         }
 
-        .why-attend h2 {
-            color: #0b3d91;
+        /* Animations */
+        @keyframes fadeInUp {
+            from {
+                opacity: 0;
+                transform: translateY(30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
         }
 
-        .why-attend ul {
-            list-style-type: disc;
-            padding-left: 20px;
+        @keyframes fadeInDown {
+            from {
+                opacity: 0;
+                transform: translateY(-30px);
+            }
+            to {
+                opacity: 1;
+                transform: translateY(0);
+            }
+        }
+
+        .fade-in {
+            opacity: 0;
+            transform: translateY(30px);
+            animation: fadeInUp 1s forwards;
+        }
+
+        .event-details,
+        .card {
+            animation: fadeInUp 1.2s ease-in-out forwards;
         }
 
         /* Button */
-        .btn-register {
-            background-color: #0b3d91;
+        .btn-custom {
+            background-color: #1f4068;
             color: white;
             padding: 10px 20px;
             font-size: 1.1rem;
@@ -75,74 +126,75 @@
             transition: background-color 0.3s ease;
         }
 
-        .btn-register:hover {
+        .btn-custom:hover {
             background-color: #e43f5a;
         }
 
-        /* Footer */
         footer {
-            background-color: #0b3d91;
+            background-color: #162447;
             color: white;
             text-align: center;
             padding: 10px 0;
             position: relative;
             bottom: 0;
             width: 100%;
+            animation: fadeInUp 1.2s ease-in-out forwards;
+            height: 100%;
         }
 
         @media (max-width: 768px) {
-            .header-title h1 {
+            .event-header-title h1 {
                 font-size: 2rem;
-            }
-
-            .event-details h2 {
-                font-size: 1.5rem;
             }
         }
     </style>
 </head>
 
 <body>
+    <!-- Preloader -->
+    <div id="preloader">
+        <img src="./logo.png" alt="TNN Logo">
+    </div>
 
     <!-- Header -->
     <header>
-        <div class="header-title">
-            <h1>Welcome to Cyborg</h1>
-            <p>Getting Started With CyberSecurity</p>
+        <div class="container">
+            <div class="header-content">
+                <div class="logo">
+                    <img src="./logo.png" alt="TNN Logo" width="150px" height="150px">
+                </div>
+                <div class="logo-name">Team Next Nexus</div>
+            </div>
+            <div class="event-header-title">
+                <h1>Cyborg: Getting Started With CyberSecurity</h1>
+                <p>Cybersecurity Bootcamp</p>
+            </div>
         </div>
     </header>
 
-    <!-- Event Details Section -->
-    <section class="container event-section">
+    <!-- Event Section -->
+    <section class="container mt-5 fade-in">
         <div class="row">
-            <div class="col-md-6">
+            <div class="col-lg-6 mb-4 event-image">
+                <img src="./cyber.png" alt="CyberSecurity Event Image" width="600px" height="400px">
+            </div>
+
+            <div class="col-lg-6">
                 <div class="event-details">
-                    <h2>Event Overview</h2>
-                    <p>"Cyborg" is an engaging online program tailored for individuals eager to explore the dynamic and ever-evolving field of cybersecurity. This bootcamp serves as an excellent entry point for beginners and a valuable refresher for those looking to enhance their existing skills.</p>
-                    <p><strong>Venue:</strong> Online</p>
+                    <h2>Event Details</h2>
                     <p><strong>Date:</strong> 12 October 2024</p>
                     <p><strong>Time:</strong> 9:30 PM - 11:00 PM (IST)</p>
+                    <p><strong>Platform:</strong> Online</p>
+                    <p><strong>Hosted by:</strong> Team Next Nexus</p>
 
-                    <a href="https://forms.gle/JaJcaAQ4FACnSEp77" class="btn btn-register mt-3">Register Now</a>
+                    <p>Welcome to Cyborg, an engaging online program tailored for individuals eager to explore the dynamic and ever-evolving field of cybersecurity. This bootcamp serves as an excellent entry point for beginners and a valuable refresher for those looking to enhance their existing skills.</p>
+
+                    <a href="https://forms.gle/qGU6qodyjoQxubBK8" class="btn btn-custom mt-3">Register Now</a>
                 </div>
-            </div>
-            <div class="col-md-6">
-                <img src="https://via.placeholder.com/600x400" alt="CyberSecurity Event Image" class="img-fluid rounded">
             </div>
         </div>
     </section>
-
-    <!-- Why Attend Section -->
-    <section class="container why-attend">
-        <h2>Why Attend Cyborg?</h2>
-        <ul>
-            <li><strong>Comprehensive Introduction:</strong> Gain essential knowledge of cybersecurity fundamentals and best practices.</li>
-            <li><strong>Hands-On Learning:</strong> Participate in interactive sessions to solidify your understanding.</li>
-            <li><strong>Industry-Relevant Skills:</strong> Learn about key threats, defenses, and how to protect systems from attacks.</li>
-            <li><strong>Networking Opportunities:</strong> Connect with peers and instructors to grow your professional network.</li>
-            <li><strong>Valuable for Beginners and Experienced Learners:</strong> Whether you’re starting out or brushing up on your skills, this bootcamp is ideal for all levels.</li>
-        </ul>
-    </section>
+    <br>
 
     <!-- Footer -->
     <footer>
@@ -151,6 +203,11 @@
 
     <!-- Bootstrap 5 JS -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"></script>
+    <script>
+        window.addEventListener("load", function () {
+            document.getElementById("preloader").style.display = "none";
+        });
+    </script>
 </body>
 
 </html>
